Skill and contact enums  added to Script

--- a/style.css
+++ b/style.css
@@ -17,3 +17,12 @@ header {
     padding: 60px 20px;
     background: #020617;
 }
+
+section {
+    text-align: center;
+    padding: auto;
+}
+
+.hidden {
+    display: None;
+}
