--- a/style.css
+++ b/style.css
@@ -8,11 +8,14 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
+    background: #0f172a;
+    /*
     background-image: url("background.png");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    */
     color: #e2e8f0;
     line-height: 1.6;
 }
@@ -84,7 +87,7 @@ section {
     width: 70%;
     margin: 60px auto;
     padding: 80px 10%;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(255, 255, 255, 0.05);
     border-radius: 25px;
     backdrop-filter: blur(10px);
     border: 1px solid rgba(0, 0, 38, 0.3);
