--- a/style.css
+++ b/style.css
@@ -7,15 +7,11 @@
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: #0f172a;
-    /*
-    background-image: url("background.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    font-family: "Cinzel", serif;
+    background-color: #0f172a;
     color: #e2e8f0;
     line-height: 1.6;
 }
@@ -29,10 +25,11 @@ header {
     background: linear-gradient(135deg, #1e293b, #0f172a);
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
     border-bottom: 2px solid rgba(255, 255, 255, 0.05);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.05);
 }
 
 header h1 {
-    font-size: 3rem;
+    font-size: 4rem;
     margin-bottom:  10px;
     font-weight: 800;
 }
@@ -44,205 +41,67 @@ header p {
 
 
 
-/* ------ Links ------- */
-a {
-    color: #38bdf8;
-    text-decoration: none;
+/* ------ Main ------ */
+
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-a:hover {
-    text-decoration: underline;
+.navigation_buttons {
+    display: flex;
+    gap: 40px;
 }
-
-
-
-/* ------ Navigation ------- */
-
-nav {
-    margin-top: 20px;
-}
-
-nav .button {
-    margin: 6px;
-    padding: 10px 20px;
-    border-radius: 90px;
-    background: linear-gradient(90deg, #f6f33b90, #44d40690);
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    transition: 0.25 ease;
-}
-
-nav .button:hover {
-    background: linear-gradient(150deg, #f6f33bc0, #44d406c0);
-    transform: translate(-3px);
-}
-
-
-
-/* ------ Sections ------ */
-
-section {
-    width: 70%;
-    margin: 60px auto;
-    padding: 80px 10%;
-    background: rgba(255, 255, 255, 0.05);
-    border-radius: 25px;
-    backdrop-filter: blur(10px);
-    border: 1px solid rgba(0, 0, 38, 0.3);
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.02);
-    transition: 0.25 ease;
-    position: relative;
-}
-
-section:hover {
-    transform:  translateY(-6px);
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.3);
-}
-
-section h2 {
-    font-size: 2.3rem;
-    margin-bottom: 20px;
-    font-weight: 700;
-    color: #f1f5f9;
-    display: inline-block;
-    position: relative;
-}
-
-section h2::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 4px;
-    background: linear-gradient(90deg, #d7f63b, #06d41b);
-    display: block;
-    margin-top: 6px;
-    border-radius: 4px;
-}
-
-
-
-/* ------ Skill section ------- */
-
-
-/* -- Skill buttons -- */
-
-#skill_buttons,
-.hidden {
-    margin-top: 10px;
-}
-
-.skill_button {
-    margin: 8px;
-    padding: 10px 18px;
-    border-radius: 8px;
-    background: linear-gradient(90deg, rgba(0, 200, 255, 0.6), rgba(0, 255, 200, 0.6));
-    color: #f1f5f9;
-    border: 1px solid rgba(255, 255, 255, 0.08);
-    cursor: pointer;
-    font-weight: 600;
-    transition: 0.25s ease;
-}
-
-.skill_button:hover {
-    background: linear-gradient(1500deg, rgba(0, 200, 255, 0.8), rgba(0, 255, 200, 0.8));
-    transform: scale(1.05);
-}
-
-.hidden {
-    display: None;
-}
-
-
-/* -- Skill container -- */
-
-#skill_container {
-    margin-top: 20px;
-}
-
-.skill_item {
-    margin: 8px;
-    padding: 10px 18px;
-    border-radius: 8px;
-    background: #1e293b;
-    color: white;
-    cursor: pointer;
-    transition: 0.25s ease;
-}
-
-.skill_item:hover {
-    background: #334155;
-    transform: scale(1.05);
-}
-
-.skill_level {
-    margin-top: 20px;
-    padding: 15px;
-    background: rgba(255, 255, 255, 0.08);
-    border-radius: 10px;
-}
-
-
-
-/* ------ Project section ------ */
-
-.project {
-    background: rgba(108, 177, 255, 0.08);
-    padding: 25px;
-    border-radius: 15px;
-    margin-bottom: 25px;
-    transition: 0.25s ease;
-    border: 1px solid rgba(256, 255, 255, 0.1);
-}
-
-.project:hover {
-    transform: translateY(-6px);
-    background: rgba(108, 177, 255, 0.15);
-}
-
-.project h3 {
-    font-size: 1.4rem;
-    color: rgba(0, 238, 255, 0.8);
-    margin-bottom: 8px;
-}
-
 
 
 /* ------ Buttons ------- */
+
 .button {
-    padding: 10px 20px;
-    background: rgba(0, 238, 255, 0.6);
-    color: white;
+    padding: 22px 56px;
+    border-radius: 999px;
+    font-size: 1.4rem;
+    color: #0f172a;
     border: none;
-    border-radius: 10px;
     cursor: pointer;
-    font-weight: 600;
-    margin-top: 15px;
-    transition: 0.25s;
+    font-weight: 700;
+    text-decoration: none;
+    position: relative;
+    transition: 0.25 ease;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.35);
 }
 
 .button:hover {
-    background: rgba(0, 238, 255);
-    transform: translate(-3px);
+    transform: translate(-3px) scale(1.04);
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.5);
 }
 
 
-
-/* ------ Contact section ------- */
-
-.contact p {
-    margin: 5px 0;
+.button.portfolio {
+    background: linear-gradient(35deg, #a16207, #ca8a04);
 }
 
-.social_links .button {
-    margin-top: 10px;
+.button.portfolio:hover {
+    background: linear-gradient(135deg, #d97706, #facc15);
+}
+
+
+.button.cv {
+    background: linear-gradient(35deg, #5b21b6, #6d28d9);
+}
+
+.button.cv:hover {
+    background: linear-gradient(135deg, #7c3aed, #9333ea);
 }
 
 
 
 /* ------- Footer ------- */
 footer {
+    background: linear-gradient(135deg, #1e293b, #0f172a);
+    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
+    border-top: 2px solid rgba(255, 255, 255, 0.05);
     text-align: center;
     padding: 30px;
     color: #94a3b8;
