--- a/cv_style.css
+++ b/cv_style.css
@@ -80,14 +80,14 @@ header {
     text-decoration: underline;
 }
 
-#education a {
+#studyinfo {
     color: #2d8c05;
     text-decoration: none;
     font-weight: 600;
     transition: transform 0.25s ease;
 }
 
-#education .info:hover a {
+#studyinfo:hover {
     padding-top: -200px;
     color: #34472c;
     transform: translateY(-2px) scale(1.1);
