--- a/cv_style.css
+++ b/cv_style.css
@@ -300,10 +300,11 @@ li::before {
 }
 
 .languages {
+    padding-top: 20px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
-    margin-top: 30px;
+    margin: center 30px;
 }
 
 .language_box {
